# Permuta

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  TODO_permutation.md  TODO_refactoring.md  avoiders.py  mypy.ini  plan_for_merging_with_permpy  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: build-and-deploy.yml  test.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  install.rst  license.rst  modules.rst  permuta.math.rst  permuta.misc.rst  permuta.rst
old/: Permutations.py  permutation.py
permuta/: MeshPatt.py  MeshPattern.py  Perm.py  PermSet.py  Permutation.py  Permutations.py  __init__.py  avoiders.py  cli.py  flippable.py  mesh_pattern.py  mesh_patterns.py  meshpatt.py  meshpattset.py  pattern.py  perm.py  permset.py  permutation.py  permutation_sets.py  permutations.py  permutils.py  shiftable.py
permuta/_interfaces/: Shiftable.py
permuta/_perm_set/: PermSetBase.py  __init__.py  permset_base.py
permuta/_permset/: PermSetBase.py  __init__.py
permuta/bisc/: __init__.py  bisc.py  bisc_subfunctions.py  perm_properties.py
permuta/demo/: Perm.py  PermClass.py  PermSet.py  __init__.py  perm.py  permclass.py
permuta/descriptors/: Basis.py  Descriptor.py  Predicate.py  __init__.py  basis.py  descriptor.py  predicate.py
permuta/enumeration_strategies/: __init__.py  abstract_strategy.py  core_strategies.py  finitely_many_simples.py  insertion_encodable.py
permuta/interfaces/: Patt.py  Rotatable.py  __init__.py  flippable.py  patt.py  rotatable.py  shiftable.py
permuta/math/: __init__.py  counting.py
permuta/misc/: __init__.py  (+18 more)
tests/: test_MeshPatt.py  test_Perm.py  test_PermSet.py  test_av.py  test_enumeration_strategies.py  test_math_counting.py  test_mesh_pattern.py  test_meshpatt.py  test_misc_misc.py  test_misc_ordered_set_partitions.py  test_perm.py  test_permutation.py  test_permutation_sets.py  test_permutations.py
(+157 files in other folders)
